{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 9,
  "lineage": "933ab2df-73c7-5ba8-d09a-6a6d46927e79",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "sample_main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:734908905460:route-table/rtb-0b0f0991e781f7919",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01cbe3c6a6eec9924",
                "route_table_id": "rtb-0b0f0991e781f7919",
                "subnet_id": "subnet-0b31f9512959c4323"
              },
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0c538c2747d03c605",
                "route_table_id": "rtb-0b0f0991e781f7919",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0b0f0991e781f7919",
            "owner_id": "734908905460",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b0f0991e781f7919",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc924e17e32d7660",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0521ed5b5ddf74b2a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:734908905460:internet-gateway/igw-0cc924e17e32d7660",
            "id": "igw-0cc924e17e32d7660",
            "owner_id": "734908905460",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "sample_gw"
            },
            "tags_all": {
              "Name": "sample_gw"
            },
            "vpc_id": "vpc-0521ed5b5ddf74b2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc924e17e32d7660",
            "id": "r-rtb-0b0f0991e781f79191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b0f0991e781f7919",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sample_gw",
            "aws_vpc.sample_vpc",
            "data.aws_route_table.sample_main_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_subnet_attache_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cbe3c6a6eec9924",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b0f0991e781f7919",
            "subnet_id": "subnet-0b31f9512959c4323"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc",
            "data.aws_route_table.sample_main_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:734908905460:security-group/sg-0fbe520665e2fec4b",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0fbe520665e2fec4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample_security_group",
            "name_prefix": "",
            "owner_id": "734908905460",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample_security_group"
            },
            "tags_all": {
              "Name": "sample_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521ed5b5ddf74b2a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:734908905460:subnet/subnet-0b31f9512959c4323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b31f9512959c4323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "734908905460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "sample_subnet"
            },
            "tags_all": {
              "Name": "sample_subnet"
            },
            "vpc_id": "vpc-0521ed5b5ddf74b2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:734908905460:vpc/vpc-0521ed5b5ddf74b2a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-06a499436e0d8db47",
            "default_route_table_id": "rtb-0b0f0991e781f7919",
            "default_security_group_id": "sg-029ee5146f68609b8",
            "dhcp_options_id": "dopt-0c7b8f16c647f4a36",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0521ed5b5ddf74b2a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0f0991e781f7919",
            "owner_id": "734908905460",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "sample_vpc"
            },
            "tags_all": {
              "Name": "sample_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}